add layouts of homepage

--- a/css/medium.css
+++ b/css/medium.css
@@ -18,3 +18,11 @@ body {
     padding: 7px 20px 9px;
     border-style: solid;
 }
+
+.aside-buttons > li {
+    margin-bottom: 10px;
+}
+
+.border-top-dark {
+    border-top:1px solid rgba(230, 230, 230, 1);
+}
